--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     },
     "dependencies": {
         "@chenfengyuan/datepicker": "^1.0.9",
+        "array-unique": "^0.3.2",
         "axios": "^0.19.2",
+        "cities.json": "^1.1.5",
         "cors": "^2.8.5",
         "jquery": "^3.4.1",
         "jshashes": "^1.0.8",
+        "latinize": "^0.4.1",
         "nodemailer": "^6.4.6"
     }
 }
