--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "es6",
     "target": "es5",
     "sourceMap": true,
-    "strict": true
+    "strict": false
   },
   "exclude": [
     "node_modules"
